Checking If My Commits Are Registered

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "type": "git",
     "url": "git+https://github.com/fuel000cynical/Portfolio.git"
   },
-  "author": "Soham Gupta",
+  "author": "fuel000cynical",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/fuel000cynical/Portfolio/issues"
