--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-fileupload": "^1.5.1",
